# clip

./: .gitignore  .gitmodules  README.md  meson.build
include/clip/: clip.hpp
include/clip/_impl/: meta.hpp  str_const.hpp
include/clip/completions/: zsh.hpp
src/: clip_module.cpp  test.cpp
subprojects/: tuplet.wrap
subprojects/packagefiles/tuplet/: meson.build
